<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KlambyShop</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_for_produtcts">Search for produtcts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="collections">Collections</string>
    <string name="show_all">Show All</string>
    <string name="shirts">Shirts</string>
    <string name="bg_collection">bg_colection</string>
    <string name="icon_collection">icon_collection</string>
    <string name="hoodies">Hoodies</string>
    <string name="jacket">Jacket</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="bottoms">Bottoms</string>
    <string name="image">image</string>
    <string name="recommendation_products">Recommendation Products</string>
    <string name="product_details">Product Details</string>
    <string name="arrow_back">arrow back</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="similar_product">Similar Product</string>
    <string name="price">Price</string>
    <string name="item_favorite">item_favorite</string>
    <string name="instock">in Stock</string>
    <string name="soldout">Sold Out</string>
    <string name="username">Username</string>
    <string name="my_order">My Order</string>
    <string name="personal_data">Personal Data</string>
    <string name="general">General</string>
    <string name="address_book">Address Book</string>
    <string name="more">More</string>
    <string name="sustainable_fashion_brand">Sustainable Fashion Brand</string>
    <string name="please_add_the_product_you_like">Please add the product you like</string>
    <string name="add_product">Add Product</string>
    <string name="checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="format_email_tidak_valid">format email tidak valid</string>
    <string name="password">Password</string>
    <string name="minimal_6_karakter">minimal 6 karakter</string>
    <string name="don_t_have_an_account_singup">Don\'t have an account? Singup</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">Already have an account? login</string>
    <string name="logout">Logout</string>
    <string name="username_email_com">username@email.com</string>
    <string name="zero_waste_lifestyle">Zero Waste Lifestyle</string>
    <string name="the_movement_to_reduce_waste_by_reduce_the_need_reuse_recycle_and_make_your_own_compost">The movement to reduce waste by reduce the need, reuse, recycle, and make your own compost</string>
    <string name="_1_of_3">1 of 3</string>
    <string name="skip">skip</string>
    <string name="thrifting">Thrifting</string>
    <string name="secondhand_buying_behavior_which_can_still_be_used">Secondhand buying behavior which can still be used</string>
    <string name="_2_of_3">2 of 3</string>
    <string name="fashion_brand_with_good_practice_prioritize_environmental_and_human_values">Fashion brand with good practice prioritize environmental and human values</string>
    <string name="_3_of_3">3 of 3</string>
    <string name="next">next</string>
    <string name="beta_version">BETA VERSION</string>
</resources>